--- a/TechWeekly/summary_20180402.md
+++ b/TechWeekly/summary_20180402.md
@@ -212,7 +212,25 @@ NASNet在cifar数据集上的表现:<br>
 
   ([Paper](https://arxiv.org/pdf/1804.07573.pdf))
 
+**关键点**： 使用 **global depth卷积层**(GDConv)作为最后一层特征输出层，避免使用全连接层（大幅增加计算量）或者使用Global Average Pooling (根据[实验结果](https://arxiv.org/abs/1801.07698)发现牺牲了特征性能，降低精度)
 
+GDCov层计算量为**WHM** (feature map的三个维度)：
+
+$G_m = \sum_{i,j} K_{i,j,m}.F_{i,j,m}$
+
+**网络**： 使用**MobileNetV2**的骨架，使用**[ArcFace](https://arxiv.org/abs/1801.07698) Loss**, 激活函数为**PReLU**。
+
+![image5-1](pic/image_003.jpg)
+
+实验结果：
+
+速度：（CPU是小米五的骁龙820）
+
+![image5-2](pic/image_002.jpg)
+
+精度：
+
+![image5-3](pic/image_004.jpg)
 
 ## 3. DL deployment on embedded devices
 ### 1). Model Compression and Speedup with:
@@ -351,4 +369,15 @@ NASNet在cifar数据集上的表现:<br>
   流程中间效果: <br>
   ![image4-1-3](pic/Selection_431.png)
 
+
+
+## 5. Datasets Released
+
+1. Google Open Images V4 ([source](https://research.googleblog.com/2018/04/announcing-open-images-v4-and-eccv-2018.html))
+
+   15.4M bounding-boxes for 600 categories on 1.9M images
+
+   ![image5-1-1](pic/image_005.png)
+
+   ​
 
