--- a/TechWeekly/summary_20180402.md
+++ b/TechWeekly/summary_20180402.md
@@ -114,7 +114,7 @@ Deformable convolution提取feature extraction:在ResNet101, Inception-ResNet上
 
 ![image2-12](pic/Selection_276.png)
 
-### 2). MobileNetV2
+### 2). MobileNetV2 (2018.1)
 ([Paper](https://arxiv.org/pdf/1801.04381.pdf)) ([Code](https://github.com/tensorflow/models/tree/master/research/slim/nets/mobilenet))
 
 **总结:** 核心为 **Depthwise separable convolution (同MobileNetV1)** + **Linear Bottleneck** + **Inverted residual block with skip connection between bottlenecks**
@@ -208,7 +208,7 @@ NASNet在cifar数据集上的表现:<br>
 
 
 
-### 5). MobileFaceNets
+### 5). MobileFaceNets (2018.4)
 
   ([Paper](https://arxiv.org/pdf/1804.07573.pdf))
 
@@ -232,7 +232,112 @@ $G_m = \sum_{i,j} K_{i,j,m}.F_{i,j,m}$
 
 ![image5-3](pic/image_004.jpg)
 
+### 6). Decoupled Network (2018.4) 
+
+([Paper](https://arxiv.org/abs/1804.08071))
+
+**关键点**: **decoupled convolution operator**: 将正常conv层的內积计算（inner product）分解成**可学习**的分别用于学习类内差异(intra-class)和类间语义(semantic)差异的算子。
+
+**Intuition**： 正常的內积计算$<w, x>=w^Tx$将类间差异和类内差异用同一种方式评估，其模的形式可以写成$||w|| ||x|| cos(\theta_(w,x_))$，根据mnist特征的分布来看模的长度（特征范数）代表了类内差异，而特征之间的角度代表了类间差异，所以很自然的想到可以将內积计算分解为**模**和**角度**计算两部分，其形式为$f_d(w,x)=h(||w||, ||x||) g(\theta_(w,x_))$ 。这种计算方式的优点有1）h和g函数可以有多种形式，其超参也可以通过训练学习；2）在设定**边界**大小的时候可以更快收敛；3）某些形式的h和g函数训练出来的模型对对抗攻击样本会更鲁棒。
+
+![image6-1](pic/image_005.jpg)
+
+#### Decoupled Convolution Operators
+
+**1. Magnitude Function:**
+
+ $||w||$ 是kernel的内在性质，表示kernel的**重要性**而不是输入的类内差异。在$h(.)$中移除w使所有kernel的重要性一致，使更多kernel影响结果从而提高了网络的**泛化**能力;但是在h中引入w（weighted decoupled operators）能够提高模型的表现力（对大规模多类数据处理比较有用）。下面对这两种情况都分别做了讨论。根据是否对函数的输出结果范围进行限定可以分成bounded decoupled operator和unbounded decoupled operator两种。
+
+**Bounded Decoupled Operators**
+
+约束：$|f_d(w,x)|\le c$
+
+- Hyperspherical Convolution: 令$h(||w||, ||x||)=\alpha$ 则$f_d(w, x)=\alpha . g(\theta_(w,x_))$,g(.)的输出一般为[-1,1]，因此当$\alpha$为1 的时候此时就相当于[SphereConv](https://arxiv.org/abs/1711.03189)（当g(.)=cos(.)可以视为将w和x投射到**超球面**上后进行內积计算）
+- Hyperball Convolution: 令$h(||w||,||x||)=\alpha min(||x||, \rho)/\rho$ , $\rho$控制$||x||$的饱和阈值，$\alpha$控制结果的范围。当$||x||<\rho$的时候，输出的大小与$||x||$是线性相关的，超过则输出$\alpha$，这样就避免将非常小的$||x||$对结果的明显影响，因为这些输入的信息可能不太重要。（当g(.)=cos(.)时，可以视为将$||w||$投射到**超球面**，将$||x||$投射到**超球体**中然后进行內积计算）
+- Hyperbolic Tangent Convolution：令$h(||w||, ||x||)=\alpha tanh(\frac{||x||}{\rho})$。可以视为上面BallConv的smooth版本。
+
+**Unbounded Decoupled Operators**
+
+没有上面的约束条件。
+
+- Linear Convolution: 令$h(||w||, ||x||)=\alpha ||x||$
+- Segmented Convolution: 令$h(||w||,||x||)= \left\{\begin{array}{c l}\alpha||x||, 0\le||x||\le \rho \\ \beta||x||+\alpha \rho - \beta\rho,    \rho<||x||\end{array}\right.$ $\alpha$控制$||x||\le\rho$的slope，$\beta$则控制$||x||>\rho$. 就是一种多段的线性函数，LinearConv和BallConv都是其两种特殊的形式。
+- Logarithm Convolution: 令$h(||w||,||w||)=\alpha log(1+||x||)$ 
+- Mixed Convolution: 这里只考虑LinearConv和LogConv的结合，令$h(||w||,||x||)=\alpha||x||+\beta log(1+||x||)$ 
+
+这些算子的几何形状解释如下：
+
+![image5-2](pic/image_006.jpg)
+
+这些算子的性质有：1）Operator radius：梯度的分界点；2）Boundedness：收敛速度和鲁棒性（影响神经网络对对抗样本鲁棒性的[Lipschitz常量](https://arxiv.org/abs/1705.08475)）。3）smoothness：拟合能力和收敛能力，但是计算开销更高。
+
+**2. Angular Activation Function**
+
+Angular function的设计基本按照[这篇文章](https://arxiv.org/abs/1711.03189)进行，分四种：
+
+- linear angular activation：$g(\theta_(w,x_))=-\frac{2}{\pi}\theta_(w,x_)+1$
+
+- cosine angular activation：$g(\theta_(w,x_))=cos(\theta_(w,x_))$
+
+- sigmoid angular activation: $g(\theta_(w,x_))=\frac{1+exp(-\frac{\pi}{2k})}{1-exp(-\frac{\pi}{2k})}.\frac{1-exp(\frac{\theta_(w,x_)}{k}-\frac{\pi}{2k})}{1+exp(\frac{\theta_(w,x_)}{k}-\frac{\pi}{2k})}$ ,k控制曲率，可以在训练的时候通过BP进行学习。
+
+- square cosine angular activation: $g(\theta_(w,x_))=sign(cos(\theta)).cos^2(\theta)$,增加在分界线附近的一定程度的angular margin。
+
+  ![image5-9](pic/image_007.jpg)
+
+**3. Weighted Decoupled Operators**
+
+通过以下两种方式将$||w||$引入magnitude函数。
+
+- Linear Weighted Decoupled Operator: 与之前的算子类似，只是将$||x||$用$||w||$替换，比如SphereConv:$h(||w||, ||x||)=\alpha ||w||$
+- Nonlinearly Weighted Decoupled Operator: 通过非线性的方式将$||w||$引入激活函数。以TanhConv为例，h函数可以用以下两种方式：$\alpha tanh(\frac{1}{\rho}||x||.||w||)或者$ $\alpha tanh(\frac{1}{\rho}||w||) tanh(\frac{1}{\rho}||x||)$
+
+**4. Learnable Decoupled Operator**
+
+一般来说算子里面的超参需要通过cross-validation来实验，这里可以通过学习来获得h和g函数的超参。但是由于超参太多，全部学习需要大量数据和时间，因此这里经过权衡只选择学习operator radius $\rho$.
+
+#### Optimization tricks
+
+**1. Weight projection**: 对于SphereConv, w的梯度为：$\frac{\partial}{\partial{w}}(\hat{w}^T\hat{x})=\frac{\hat{x}-\hat{w}^T\hat{x}.\hat{w}}{||w||}$。每隔一段时间$w\leftarrow s.\hat{w},$避免BP的时候$||w||$太大导致更新太少。不过不能用在weighted decoupled operator中，因为会影响FP。
+
+**2. Weighted Gradients**: 对于上面的梯度计算，通过两边相乘$||w||$来消除$||w||$的影响，更新权重的公式变成：$\Delta w =  \hat{x}-\hat{w}^T\hat{x}.\hat{w}$ ,这样就避免了梯度受权重norm的影响。
+
+**3. Pretraining as better initialization**: 通过pretrained的权重来进行初始化
+
+**4. **由于标准的conv+relu操作可以写成$||w||.||x||.max(0, cos(\theta))$,因此当$g(\theta)=max(0, cos(\theta))$ 的时候relu操作可以在算子里面直接学习到，因此使用特定decoupled operator可以不用relu操作。
+
+#### Experiment Result
+
+weighted decoupled operator: 
+
+![image5-3](pic/image_011.jpg)
+
+learning without BN:
+
+![image5-4](pic/image_010.jpg)
+
+Learning without ReLU:
+
+![image5-5](pic/image_009.jpg)
+
+Convergence:
+
+![image5-6](pic/image_012.jpg)
+
+![image5-7](pic/image_013.jpg)
+
+Adversarial attacks:
+
+对于White box 对抗攻击，TanhConv对FGSM（fast gradient sign method）抵抗效果最好，SphereConv对BIM（basic iterative method）效果最好。
+
+对于black box对抗攻击，BallConv和TanhConv没有明显效果，没有对抗训练的SphereConv的抵抗效果最好，但是通过对抗训练则没有效果。
+
+![image5-8](pic/image_014.jpg)
+
+
+
 ## 3. DL deployment on embedded devices
+
 ### 1). Model Compression and Speedup with:
   **matrix factorization, weights pruning, quantization, light network** (See `deeplearning_notes/model_compression/compression_method_summary.md`)
 
