update week report 0828

--- a/TechWeekly/summary_20180828.md
+++ b/TechWeekly/summary_20180828.md
@@ -316,10 +316,118 @@ Global RSN表示只使用global region进行预测；Offset only RSN类似与def
 
 
 
+#### 7. Semantic Soft Segmentation (2018.8) 
+
+([Paper](http://cfg.mit.edu/sites/cfg.mit.edu/files/sss_3.pdf))
+
+**摘要**: 设计了semantic soft segments（sss），这是一组对应图片中有semantic意义的不同区域的层，在不同的物体之间有精确的soft transition。此方法是一种**class-agnostic**的分割方法，提出了embed 图片texture和color以及通过神经网络输出的semantic信息的图结构。soft segment通过仔细构建的**Laplacian矩阵**完全自动的特征值分解来生成，而这个Laplacian矩阵代表图片中每个像素对属于同一个segment的可能性。通过对spectral matting的扩展使之在构建此矩阵的时候不光使用low level的**局部颜色分布外**还包括**非局部的颜色特征**以及high-level的语义信息。
+
+soft segment的图片formation model：$(R, G, B)_{input} = \Sigma_i\alpha_i(R, G, B)_i, \Sigma_i\alpha_i=1$，其中$\alpha \in [0, 1]$，0为完全透明，1为完全不透明。
+
+**注：** soft segmentation是指将图片分解成多个segments，而每个pixel可以属于不止一个segment。
+
+semantic feature vector 计算流程：
+
+![image7-1](pic/image_136.jpg)
+
+**Spectral matting**
+
+使用局部颜色分布来构建Laplacian矩阵L用于捕获局部区域（5x5）每对pixel的local color affinity。 L中**小的**特征值相关的特征向量在生成高质量matt的有重要影响，每个soft segment是**对应L最小的特征值的K个特征向量的线性组合**，使matting sparsity最大化，使partial opacity出现降至最低。通过一下energy function来计算：
+
+$arg\ min_{\{y_i\}} \Sigma_{i, p}|\alpha_{ip}|^\gamma + |1-\alpha_{ip}|^\gamma; with\ \alpha_i = Ey_i; subject to:\ \Sigma_i\alpha_{ip}=1$
+
+其中$\alpha_{ip}$是第i个segment第p个pixel的$\alpha$值，E是包含L最小特征值的K个特征向量矩阵，$y_i$是构成soft-segments的特征向量的线性权重。
+
+L的计算可以通过pixel对之间的affinity进行计算，pixel对有正的affinity的值相似，0值表示两者独立，负值则值不同。
+
+$L = D^{-1/2}(D-W)D^{-1/2}$
+
+W是包含所有像素对affinity的方阵，D是对应的度矩阵。
+
+**Nonlocal Color Affinity**
+
+这里设计了基于over-segmentation的采样实现更远距离的color affinity用于segment评估。具体来说通过SLIC生成2500个**superpixel**，所有superpixel在半径为图片大小20%的半径以内，然后对每个superpixel进行affinity评估。这样的好处就是每个superpixel值取一个样，sparsity还是很高，计算量小。color affinity的计算如下：
+
+$W_{s,t}^C= (erf(a_c(b_c-||c_s - c_t||))+1)/2$
+
+其中$c_s$和$c_t$是superpixel的平均颜色，在[0, 1]，erf是高斯error function，$a_c$和$b_c$是超参，用控制affinity衰减的速度和变成0的阈值。
+
+![image7-2](pic/image_137.jpg)
+
+**Semantic affinity**
+
+使用神经网络（**DeepLab-ResNet-101**）生成各物体每个pixel的feature vector，属于同一物体的两个pixel生成的feature vector很接近，与其他区域的pixel的很远。Semantic affinity也是在**superpixel**上生成的，一方面可以增加稀疏性，另一方面可以降低取到transition region不靠谱的pixel时的影响。与color affinity不同的是semantic affinity**只取临近的superpixel**用于构建连接体。计算方式如下：
+
+$w_{s,t}^S=erf(a_s(b_s-||\tilde{f_s}-\tilde{f_t}||))$
+
+![image7-6](pic/image_142.jpg)
+
+![image7-5](pic/image_139.jpg)
+
+
+
+**构建层**
+
+使用上述affinity构建Laplacian矩阵：
+
+$L = D^{-1/2}(D-(W_L+\sigma_S W_S+\sigma_C W_C))D^{-1/2}$
+
+然后提取L最小的100个特征值的特征向量，然后通过feature vector而非eigenvector进行k-means聚类构建中间层，首先生成40层，然后进一步减少到5层。由于5层是局限在限定数量的eigenvector导致稀疏性不是最优的，会在层中生成许多semi-transparent的区域。如下图：
+
+![image7-3](pic/image_141.jpg)
+
+因此为了提高层的稀疏性，将之前eigenvector的线性组合的限制进行放松。
+
+$E = E_L+E_S+E_F+\lambda E_C$
+
+逐项进行放松，放松后的公式具体参见文章3.4。
+
+添加限制后的效果如下图:
+
+![image7-4](pic/image_140.jpg)
+
+
+
+**实验结果：**
+
+与其他分割方式的比较：
+
+![image7-7](pic/image_143.jpg)
+
+不同affinity的效果：
+
+![image7-8](pic/image_138.jpg)
+
+与soft color segment的对比：
+
+![image7-9](pic/image_144.jpg)
+
+false case：
+
+物体颜色相似；large transition时不可靠的semantic feature vector。
+
+![image7-10](pic/image_145.jpg)
+
+
+
+
+
+
+
 ## Industry Implementation
 
 1. Tensorflow v1.8支持AMD GPU: [Project Link](https://rocm.github.io/ROCmInstall.html)
 
 2. Google Dataset Search engine: [Link](https://toolbox.google.com/datasetsearch)
 3. Open datasets by Skymind: [Link](https://skymind.ai/wiki/open-datasets)
+
+
+
+## 玄学
+
+#### Brain-Score: Which Artificial Neural Network for Object Recognition is most Brain-Like?
+
+（[Paper](https://www.biorxiv.org/content/early/2018/09/05/407007.full.pdf+html))
+
+![image8-1](pic/image_147.jpg)
 
